@@ -11,6 +11,7 @@ Testing submit_job                                        [ ok     ]
 Testing submit_null_job                                   [ ok     ]
 Testing background                                        [ ok     ]
 Testing background_failure                                [ ok     ]
+Testing add_servers                                       [ ok     ]
 
 ==========================================================================
 
